# ayria

./: .gitignore  AGENT_REVIEW_COMMENTS.md  AGENT_START_HERE.md  README.md  REVIEW_2026-03-07_FINAL.md  TODAY_STATUS_2026-03-07.md  ayria-架构设计与可行性研究.md  猫娘陪伴Agent需求总结.md
ayria/apps/runtime/: pyproject.toml
ayria/apps/runtime/app/: main.py  runtime_container.py
ayria/apps/runtime/app/agents/: capability_agent.py  evaluator_agent.py  persona_rewriter_agent.py  proactive_agent.py
ayria/apps/runtime/app/api/routes/: audit.py  chat.py  config.py  events.py  health.py  memory.py  providers.py  tasks.py  tools.py  world_state.py  ws.py
ayria/apps/runtime/app/core/: config.py  logging.py
ayria/apps/runtime/app/domain/models/: audit.py  event.py  memory.py  message.py  task.py  tool.py  world_state.py
ayria/apps/runtime/app/domain/services/: context_service.py  memory_service.py  model_execution_service.py  orchestrator.py  permission_policy_service.py  persona_service.py  presence_service.py  proactive_service.py  routing_service.py  task_service.py  tool_service.py
ayria/apps/runtime/app/evals/: __init__.py  catalog.py  live_multimodal_smoke.py  loader.py  mock_profiles.py  models.py  paths.py  result_writer.py  runner.py  runtime_harness.py  schema_validation.py  scoring.py
ayria/apps/runtime/app/infra/db/: models.py  session.py
ayria/apps/runtime/app/infra/repositories/: audit_repo.py  memory_repo.py  message_repo.py  task_repo.py  world_state_repo.py
ayria/apps/runtime/app/prompts/system/: capability.md  (+2 more)
ayria/apps/runtime/app/realtime/: event_stream.py
(+67 files in other folders)
