[project]
name = "ayria-runtime"
version = "0.1.0"
description = "Python runtime for the ayria desktop presence system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "orjson>=3.10",
  "jsonschema>=4.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
